--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
   overscroll-behavior: none;
   color: var(--font-color);
-  background-color: var(--sub-bg-color);
+  background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
   margin: 0;
