--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,21 @@ body {
   min-height: 100vh;
 }
 
-h1,
+h1{
+  overscroll-behavior: none;
+  color: var(--font-color);
+  background-color: var(--sub-bg-color);
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: 'Sarabun', sans-serif;  
+  
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+}
 h2,
 h3,
 h4,
