--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,26 @@ h1{
 }
 h2,
 h3,
-h4,
-h5,
+h4{
+  color: var(--Blue-10-b, #000);
+
+/* prg reg 16 */
+font-family: Prompt;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 25.5px; /* 159.375% */
+}
+h5 {
+  color: var(--Blue-10-b, #000);
+
+/* h5 reg 25 */
+font-family: Prompt;
+font-size: 25px;
+font-style: normal;
+font-weight: 400;
+line-height: 31.5px; /* 126% */
+}
 h6 {
   margin: 0;
 }
