--- a/src/modules/callback/pages/uploading.css
+++ b/src/modules/callback/pages/uploading.css
@@ -6,10 +6,25 @@
     text-align: center;
     cursor: pointer;
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    height: 150px;
     color: #676767;
   }
   
+  .drag-drop-area-img {
+    border: 2px dashed #ccc;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 170px;
+    width: 150px;
+    color: #676767;
+  }
+
   .drag-drop-area p {
     margin: 0;
   }
