--- a/src/modules/callback/pages/uploading.css
+++ b/src/modules/callback/pages/uploading.css
@@ -13,16 +13,17 @@
   }
   
   .drag-drop-area-img {
-    border: 2px dashed #ccc;
+    border: 2px solid #ccc; 
     padding: 20px;
     text-align: center;
     cursor: pointer;
     border-radius: 5px;
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 259px;
-    width: 200px;
-    color: #676767;
+    height: 270px; 
+    width: 180px;
+    color: #676767; 
+    background-color: #fff;
   }
 
   .drag-drop-area p {
@@ -31,5 +32,10 @@
   
   .drag-drop-area:hover {
     border-color: #E798A3;
+  }
+
+  .drag-drop-area-img:hover {
+    border-color: #e798a3;
+    background-color: #fdf6f6;
   }
   
